@@ -116,9 +116,9 @@ var content=this.CONTENT_VIEW;var showall=this.ALL_VIEW;var info=this.INFO_VIEW;
 var slide=this.SLIDE_VIEW;eval("this."+eval_key+"="+eval_val+";");}else{if("HELP"==eval_key){eval("this.STARTUP_MESSAGE="+eval_val+";");
 }else{if(eval_val){eval("this."+eval_key+"='"+eval_val+"';");}else{eval("this."+eval_key+"=0;");
 }}}},convertLinks:function(){var f=(this.HIDE_TOC?0:1);var e;var a=this.S.length-1;
-for(f;f<this.S.length;++f){var d=this.S[f].D.getElementsByTagName("a");for(e=0;e<d.length;
-++e){var c=d[e].href.replace(this.BU,"");for(var b=0;b<this.S.length;++b){if(this.S[b].iTF[c]){d[e].href="javascript:org_html_manager.go("+b+")";
-break;}}}}},ss:function(d){var b=this;var e=parseInt(d);var c=b.N;if(b.HIDE_TOC&&b.N==b.TOC&&!b.FIXED_TOC){OrgNode.hE(b.TOC.D);
+var d=document.getElementsByTagName("a");for(e=0;e<d.length;++e){var c=d[e].href.replace(this.BU,"");
+for(var b=0;b<this.S.length;++b){if(this.S[b].iTF[c]){d[e].href="javascript:org_html_manager.go("+b+")";
+break;}}}},ss:function(d){var b=this;var e=parseInt(d);var c=b.N;if(b.HIDE_TOC&&b.N==b.TOC&&!b.FIXED_TOC){OrgNode.hE(b.TOC.D);
 if(b.PLAIN_VIEW==b.VIEW){b.R.sAC();for(var a=0;a<b.R.CH.length;++a){b.R.CH[a].ST=OrgNode.SU;
 b.R.CH[a].fold();}}}if("?/toc/?"==d||(!isNaN(e)&&b.S[e])){if("?/toc/?"==d&&b.HIDE_TOC){b.N=b.TOC;
 b.R.hAC();if(b.INFO_VIEW==b.VIEW){b.W.innerHTML=b.N.D.innerHTML;}else{b.N.sSt(OrgNode.SU);
