@@ -9,6 +9,11 @@
 #+INFOJS_OPT: home:http://orgmode.org buttons:nil
 
 
+* 2009-06-27
+
+  Bugfix for links nested in lists.
+  Thanks to Xin Shi for finding this and sending a testfile.
+
 * 2009-06-25
 
   * Fix for start section.
